dist/manifests/borg-manifests/rsyslog-centralized/5rsyslog-centralized.deploy.yaml
#
# apiVersion: apps/v1
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rsyslog-centralized
  namespace: kube-system
  labels:
    k8s-app: rsyslog-centralized
    version: 0.2.0
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate

  # selector:
  #  matchLabels:
  template:
    metadata:
      labels:
        k8s-app: rsyslog-centralized
        version: 0.2.0
        kubernetes.io/cluster-service: "true"

      # annotations:
    spec:
      serviceAccountName: rsyslog-centralized
      containers:
      - name: rsyslog-centralized
        image: bossjones/rsyslog:0.2.0
        imagePullPolicy: Always
        # command:

        volumeMounts:
        # rsyslog work files; do not share with multiple instances
        - name: work
          mountPath: /work
          readOnly: false
        # log file store (if used)
        - name: log
          mountPath: /log
          readOnly: false
        
        - name: spool
          mountPath: /spool
          readOnly: false
        
        # configuration files, can be mounted read-only once finalized
        - name: container-config
          mountPath: /config
          readOnly: false
        
        # The Rsyslog config file to use
        - name: rsyslog-centralized-config
          mountPath: /rsyslog-centralized/etc
          readOnly: false
        
        - name: rsyslog-centralized-config-dot-d
          mountPath: /rsyslog-centralized/etc/rsyslog.d
          readOnly: false
        
        # - name: logrotate
        #   mountPath: /logrotate.d
        #   readOnly: false
        
        # - name: localtime
        #   mountPath: /etc/localtime
        #   readOnly: true
        
        # - name: rsyslog-centralized-pvc
        #   mountPath: /log
        #   readOnly: false
        
        # - mountPath: /etc/crontab
        #   name: datafeed-config
        

        resources:
          limits:
            cpu: ".2"
            memory: "100Mi"
          requests:
            cpu: "0.05"
            memory: "10Mi"
          

        securityContext:
          # SOURCE: https://docs.okd.io/latest/rest_api/apis-apps/v1beta2.Deployment.html
          privileged: true

        livenessProbe:
          tcpSocket:
            port: 6170
          initialDelaySeconds: 60
          timeoutSeconds: 10

        ports:
        - containerPort: 6160
          name: in-udp
          # this is TCP and not UDP on purpose
          protocol: UDP
        - containerPort: 6170
          name: in-tcp
          protocol: TCP
        - containerPort: 1601
          name: in-relp
          protocol: TCP

      - name: logrotate
        image: blacklabelops/logrotate:1.3
        volumeMounts:
        - name: log
          mountPath: /log

      volumes:
      - name: work
        emptyDir: {}
      - name: spool
        emptyDir: {}
      # log file store (if used)
      - name: log
        # emptyDir: {}
        persistentVolumeClaim:
          claimName: rsyslog-centralized-pvc
      - name: container-config
        configMap:
          name: rsyslog-centralized-container-config-0-3-0
          # defaultMode: 0775
      - name: rsyslog-centralized-config
        configMap:
          name: rsyslog-centralized-config-0-3-0
          # defaultMode: 0775
      
      - name: rsyslog-centralized-config-dot-d
        configMap:
          name: rsyslog-centralized-config-dot-d-0-3-0
          # defaultMode: 0775
      
      # - name: localtime
      #   hostPath:
      #     path: /etc/localtime
      #     type: "FileOrCreate"
      
      # - name: logrotate
      #   configMap:
      #     name: rsyslog-centralized-logrotate-0-3-0
      #     # defaultMode: 0775
      
      
      # - name: rsyslog-centralized-pvc
      # - name: rsyslog-centralized-pvc
      #   persistentVolumeClaim:
      #     claimName: rsyslog-centralized-pvc
      
      
      # - name: crontab
      #   configMap:
      #     name: rsyslog-centralized-crontab-0-3-0
      #     defaultMode: 0775
      

      hostNetwork: True

      hostPID: True

      nodeSelector:
        beta.kubernetes.io/os: linux
        kubernetes.io/hostname: "borg-queen-01"


# SOURCE: https://github.com/alonana/kubernetes/blob/b98cd3e7cf413f2eb9eb0124b9e02099655dd224/envoy-logrotate/k8s/deployment.yaml
#       - name: logrotate
#         image: AK8S_DOCKER_REPOSITORY/logrotate:1.0.0
#         volumeMounts:
#           - name: logs-volume
#             mountPath: /logs
