dist/manifests/borg-manifests/rsyslog-centralized/6rsyslog-centralized.svc.yaml
#
apiVersion: v1
kind: Service
metadata:
  name: rsyslog-centralized
  namespace: kube-system
  labels:
    k8s-app: rsyslog-centralized
    version: 0.2.0
    kubernetes.io/cluster-service: "true"
  # annotations:
spec:
  type: ClusterIP
  ports:
    - name: in-udp
      port: 6160
      protocol: UDP
      targetPort: 6160
    - name: in-tcp
      port: 6170
      protocol: TCP
      targetPort: 6170
    - name: in-relp
      port: 1601
      protocol: TCP
      targetPort: 1601
  selector:
    k8s-app: rsyslog-centralized
